# software-agent-iam-poc

./: INSTRUCTION.md  README.md  REPORT_INSTRUCTION.md  agent.Dockerfile  docker-compose.yml  pyproject.toml
app/: agent.py
config/cerbos/: config.yaml  jwt_public_key.pem
config/cerbos/policies/: minio-object.yaml  vector-collection.yaml
config/envoy/: envoy.yaml
config/spire/agent/: agent.conf
config/spire/server/: dummy_root_ca.key  register-workload.sh  server.conf
config/vault/: init.sh  spire-ca.pem  vault.hcl
sample-data/: init_chromadb.py  sample-contract.txt
