[project]
name = "software-agent-iam-poc"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.16",
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "openai>=1.0.0",
    "hvac>=1.1.1",
    "spiffe>=0.2.2",
    "spiffe-tls>=0.2.1",
]
